JSP Changes: Changed the style of the home and department pages (font size, margins, location, etc.). Also lessened horizontal scroll on those pages. Fixed html in createAccount, cleaned up spacing.

--- a/CS320_tjones50/war/_view/style.css
+++ b/CS320_tjones50/war/_view/style.css
@@ -5,6 +5,15 @@ font-family: "Helvetica Neue", Helvetica, sans-serif;
 color: #444;   
 -webkit-font-smoothing: antialiased;    background: #f0f0f0;
 }
+form{
+    margin: 0 auto;
+    margin-top: 20px;
+}
+form.departments{
+    margin-top: 10px;
+    margin-left: 0%;
+    text-align: center;
+}
 
 label {
     color: #555;
@@ -106,7 +115,8 @@ input#a:hover:not(.active) {
 }
 
 h1 {
-	text-align:center;
+	font-variant: small-caps;
+	text-align:left;
     margin: 5px;
     padding: 15px;
     color: #096333;
@@ -159,12 +169,11 @@ button.department{
     background-color: #096333;
     border: none;
     color: white;
-    padding: 15px 32px;
-    margin: 0px 50px;
-    text-align: left;
+    padding: 25px;
+    margin: 0px;
+    text-align: right;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+    font-size: 28px;
 }
 
 button.home{
@@ -173,12 +182,11 @@ button.home{
     background-color: #096333;
     border: none;
     color: white;
-    padding: 15px 32px;
-    margin: 0px 50px;
-    text-align: center;
+    padding: 25px;
+    margin: 0px;
+    text-align: left;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+    font-size: 28px;
 }
 
 button.flags{
